# OdeSolver

./: .coveragerc  .gitattributes  .gitignore  LICENSE  README.md  README.rst  make_venv.sh  pyproject.toml  requirements.txt  run_gui.bat  run_gui.sh  sonar-project.properties
.github/workflows/: main.yml
docs/: make_docs.bat  make_docs.sh
docs/images/: interpretive-workflow.bpmn  parameter-fitting.bpmn  similarity-analysis.bpmn
docs/source/: conf.py  index.rst
modelling/: MODEL-REVIEW.md  README.md
modelling/data/: calendar_activity.json  cluster_analysis.json  cluster_summary.txt  extracted_clusters.json  feature_matrix.json  species_similarity.json  species_similarity.txt
modelling/data-preparation/: pyproject.toml
modelling/data-preparation/scripts/: run-data-prep.sh
modelling/data-preparation/src/: process-yil-files.py
modelling/resident-detectability/: README.md  resident_model.py
modelling/scripts/: build-matrix.sh  clean-all.sh  clean.sh  process-pending.sh  retro-classify.sh  run-calendar.sh  run-data-prep.sh  run-fit.sh  run-similarity.sh
modelling/seasonal-presence/: README-SEASONAL.md  README.md  consensus-parameters.py  parameter_fitting.py  run-fit.sh
modelling/src/: eco-calendar.py  feature-matrix.py  feature_matrix.py  feature_table.py  process-yil-files.py  resident.py  retro-classify.py  seasonal.py  winter.py
modelling/winter-visitor/: README.md  best_params.json  consensus-parameters.py  parameter_fitting.py  run-fit.sh  winter_model.py
scripts/: run-gui.sh  run-lint.sh  run-solver.sh  run-tests.sh
src/ode_solver/: __init__.py  __main__.py
tests/data/: example_1_auto_step.json  (+11 more)
(+1063 files in other folders)
