[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ode-solver"
version = "2.1.0"
description = "ODE Solver"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "colorama==0.4.6",
  "FreeSimpleGUI==5.2.0.post1",
  "matplotlib==3.10.9",
  "numpy==2.4.4",
  "pytest==9.0.3",
  "pytest-cov",
  "rich==15.0.0"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
