[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ode-solver"
version = "2.7.0"
description = "ODE Solver"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "colorama==0.4.6",
  "flake8==7.3.0",
  "FreeSimpleGUI==5.2.0.post1",
  "matplotlib==3.10.9",
  "numpy==2.4.4",
  "openpyxl==3.1.5",
  "pandas==3.0.2",
  "pytest==9.0.3",
  "pytest-cov",
  "rich==15.0.0",
  "vulture==2.16",
  "scipy"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
