[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ode-data-prep"
version = "1.0.0"
description = "ODE Solver Ecology Modelling Data Preparation Tool"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "pandas==3.0.2",
  "openpyxl==3.1.5"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
